- Bugfixes on the backend - redesign of the frontend